RESOLVED FIXED 246284
[Live Range Selection] A few tests fail due to behavior difference in VisibleSelection::selectionFromContentsOfNode
https://bugs.webkit.org/show_bug.cgi?id=246284
Summary [Live Range Selection] A few tests fail due to behavior difference in Visible...
Ryosuke Niwa
Reported 2022-10-10 11:04:23 PDT
The following tests fail when enabling Live Range Selection due to canonicalization no longer happening in VisibleSelection::selectionFromContentsOfNode: LayoutTests/editing/deleting/paste-with-transparent-background-color.html LayoutTests/editing/execCommand/delete-selection-has-style.html LayoutTests/editing/input/select-all-clear-input-method.html LayoutTests/editing/pasteboard/contenteditable-pre-2.html LayoutTests/editing/pasteboard/copy-paste-content-starting-and-ending-canvas.html LayoutTests/editing/pasteboard/preserve-line-break-at-end-of-pasted-content.html LayoutTests/editing/selection/select-all-user-select-none.html
Attachments
Ryosuke Niwa
Comment 1 2022-10-10 11:07:50 PDT
EWS
Comment 2 2022-10-10 17:39:06 PDT
Committed 255372@main (aef26c62b048): <https://commits.webkit.org/255372@main> Reviewed commits have been landed. Closing PR #5197 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-10-10 17:40:36 PDT
Note You need to log in before you can comment on or make changes to this bug.