[Live Range Selection] A few tests fail due to behavior difference in VisibleSelection::selectionFromContentsOfNode https://bugs.webkit.org/show_bug.cgi?id=246284

Reviewed by Darin Adler.

Explicitly canonicalize selection start & end in VisibleSelection::selectionFromContentsOfNode so that
enabling live range selection wouldn't cause a new test failure.

Also add variants of the tests that enable live range selection.

* LayoutTests/editing/deleting/paste-with-transparent-background-color-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/paste-with-transparent-background-color-live-range.html: Added.
* LayoutTests/editing/execCommand/delete-selection-has-style-live-range-expected.txt: Added.
* LayoutTests/editing/execCommand/delete-selection-has-style-live-range.html: Added.
* LayoutTests/editing/input/select-all-clear-input-method-live-range-expected.txt: Added.
* LayoutTests/editing/input/select-all-clear-input-method-live-range.html: Added.
* LayoutTests/editing/pasteboard/contenteditable-pre-2-live-range-expected.txt: Added.
* LayoutTests/editing/pasteboard/contenteditable-pre-2-live-range.html: Added.
* LayoutTests/editing/pasteboard/copy-paste-content-starting-and-ending-canvas-live-range-expected.txt: Added.
* LayoutTests/editing/pasteboard/copy-paste-content-starting-and-ending-canvas-live-range.html: Added.
* LayoutTests/editing/pasteboard/preserve-line-break-at-end-of-pasted-content-live-range-expected.txt: Added.
* LayoutTests/editing/pasteboard/preserve-line-break-at-end-of-pasted-content-live-range.html: Added.
* LayoutTests/editing/selection/select-all-user-select-none-live-range-expected.txt: Added.
* LayoutTests/editing/selection/select-all-user-select-none-live-range.html: Added.
* Source/WebCore/editing/VisibleSelection.cpp:
(WebCore::VisibleSelection::selectionFromContentsOfNode):

Canonical link: https://commits.webkit.org/255372@main